# shire-compiler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
compiler/: Cargo.toml  README.md
compiler/src/: lexer.rs  main.rs  markdown.rs
language/shire-java/: Cargo.toml
language/shire-lang-core/: Cargo.toml
language/shire-lang-core/src/: file_run_service.rs  lib.rs
shire/: Cargo.toml  README.md
shire-cli/: Cargo.toml
shire-core/: Cargo.toml
shire-core/src/: lib.rs  parser.rs
shire-core/src/ast/: front_matter_type.rs  mod.rs  pattern_action_fun.rs  shire_expression.rs
shire-core/src/markdown/: md.rs
shire-wasm/: Cargo.toml
